Fix Manager Project list layout
This commit fix the broken layout for the Manager Project index list.

--- a/app/assets/stylesheets/manager/projects.scss
+++ b/app/assets/stylesheets/manager/projects.scss
@@ -3,6 +3,7 @@
 @import "mixins/form";
 @import "mixins/controls";
 @import "mixins/summary";
+@import "mixins/tables";
 
 @include controls;
 
@@ -248,5 +249,13 @@
 
   .row-medium {
     width: 423px;
+  }
+}
+
+table.projects-table {
+  @include table-style1;
+
+  td > img {
+    vertical-align: middle;
   }
 }
